--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,4 @@ org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=false
 kotlin.code.style=official
-
+android.overridePathCheck=true
